--- a/index.html
+++ b/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temperatur Converter</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Temperature Converter</title>
 </head>
+
 <body>
-    
+    <header class="main-title">
+        <h1>Temperature Converter by Sulaiman Hasan</h1>
+    </header>
+    <main class="main-section-introduction">
+        <!-- Section Celcius -->
+        <section class="section-celcius">
+            <p>Masukan Suhu Derajat Celcius(&deg;C) . . .</p>
+
+            <head>
+                <h3>Celcius (&deg;C)</h3>
+            </head>
+            <article>
+                <textarea name="" id="" cols="30" rows="1" type="number"></textarea>
+            </article>
+            <div>
+                <button class="btn-convert">Convert</button>
+                <button class="btn-reset">Reset</button>
+                <button class="btn-reverse">Reverse</button>
+            </div>
+        </section>
+        <!-- Section Fahrenheit -->
+        <section class="section-fahrenheit">
+            <p>Masukan Suhu Derajat Fahrenheit(&deg;F) . . .</p>
+
+            <head>
+                <h3>Fahrenheit (&deg;F)</h3>
+            </head>
+            <article>
+                <textarea name="" id="" cols="30" rows="1"></textarea>
+            </article>
+            <div>
+                <button class="btn-convert">Convert</button>
+                <button class="btn-reset">Reset</button>
+                <button class="btn-reverse">Reverse</button>
+            </div>
+        </section>
+        <!-- Section Kalkulasi -->
+        <section class="section-Kalkulasi">
+
+            <head>
+                <h3>Cara Kalkulasi</h3>
+            </head>
+            <article>
+                <textarea name="" id="" cols="30" rows="1"></textarea>
+            </article>
+        </section>
+        <!-- Section Penjelasan/Explanation -->
+        <section class="explanation">
+            <header>
+                <h3>Cara Konversi dari (&deg;C) ke (&deg;F)</h3>
+            </header>
+            <hr>
+            <article>
+                (Suhu <i>S</i> dalam derajat Fahrenheit (&deg;F) sama dengan suhu S dalam derajat Celcius (&deg;C) kali
+                9 dibagi 5) ditambah 32 <br>
+                <i>S</i><sub>(&deg;F)</sub> = (<i>S</i><sub>(&deg;C)</sub> x 9/5) + 32 =<br>
+                atau <br>
+                <i>S</i><sub>(&deg;F)</sub> = (<i>S</i><sub>(&deg;C)</sub> x 1.8) + 32 =<br>
+            </article>
+        </section>
+    </main>
 </body>
+
 </html>
